reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_discriminant_ignored_output.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "super::into_output_schema::<TestEnumWithDiscriminantIgnored>().output_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Infallible",
      "description": "Error object which is expected to be never returned"
    },
    {
      "kind": "enum",
      "name": "reflect_demo::tests::enums::TestEnumWithDiscriminantIgnored",
      "variants": [
        {
          "name": "Variant1"
        },
        {
          "name": "Variant2"
        }
      ]
    }
  ]
}
