reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_discriminant_output.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "super::into_output_schema::<TestEnumWithDiscriminant>().output_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Infallible",
      "description": "Error object which is expected to be never returned"
    },
    {
      "kind": "enum",
      "name": "reflect_demo::tests::enums::TestEnumWithDiscriminant",
      "variants": [
        {
          "name": "Variant1",
          "discriminant": 1
        },
        {
          "name": "Variant2",
          "discriminant": 2
        }
      ]
    }
  ]
}
