reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_empty_variant_and_fields.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "TestEnumWithEmptyVariantAndFields::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::enums::TestEnumWithEmptyVariantAndFields"
  },
  {
    "types": [
      {
        "kind": "enum",
        "name": "reflect_demo::tests::enums::TestEnumWithEmptyVariantAndFields",
        "variants": [
          {
            "name": "Variant1"
          },
          {
            "name": "Variant2",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "u8"
                },
                "required": true
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
