reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_fields.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "TestEnumWithFields::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::enums::TestEnumWithFields"
  },
  {
    "types": [
      {
        "kind": "primitive",
        "name": "f64",
        "description": "64-bit floating point number"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::enums::TestEnumWithFields",
        "variants": [
          {
            "name": "Variant1",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "u8"
                },
                "required": true
              }
            ]
          },
          {
            "name": "Variant2",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "std::string::String"
                },
                "required": true
              },
              {
                "name": "1",
                "type": {
                  "name": "f64"
                },
                "required": true
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
